--- a/index.html
+++ b/index.html
@@ -23,53 +23,13 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="Juegos.html">Juegos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="Equipo.html">Equipo</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Nosotros.html">Nosotros</a></li>
                         <li class="nav-item"><a class="nav-link" href="Servicios.html">Servicios</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-
-    <!-- Banner principal -->
-    <!--<section class="banner container">
-        <div id="carrusel" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carrusel" data-bs-slide-to="0" class="active"></button>
-                <button type="button" data-bs-target="#carrusel" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#carrusel" data-bs-slide-to="2"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="Img/Banner1.webp" class="d-block w-100" alt="Promoción 1">
-                    <div class="carousel-caption">
-                        <h2>Dispositivos de última generación</h2>
-                        <p>Descubre los últimos smartphones y tablets</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="Img/Banner2.webp" class="d-block w-100" alt="Promoción 2">
-                    <div class="carousel-caption">
-                        <h2>Los mejores planes</h2>
-                        <p>Conoce nuestros planes de telefonía e internet</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="Img/Banner3.webp" class="d-block w-100" alt="Promoción 3">
-                    <div class="carousel-caption">
-                        <h2>Ofertas especiales</h2>
-                        <p>Aprovecha nuestras promociones limitadas</p>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carrusel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carrusel" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </button>
-        </div>
-    </section>
 
     <!-- Contenido Principal -->
     <main class="container my-5">
