--- a/index.html
+++ b/index.html
@@ -67,32 +67,24 @@
 
         <!-- Servicios -->
         <section class="servicios mb-5">
+            videojuegos innovadores y experiencias interactivas
             <h2 class="titulo-seccion">Nuestros Servicios</h2>
             <div class="row">
                 <div class="col-md-4 mb-4">
                     <div class="servicio">
-                        <img src="Img/Tecnologias/internet-hogar.png" alt="Internet">
-                        <h3>Internet</h3>
-                        <p>Conexión de alta velocidad para tu hogar u oficina</p>
-                        <a href="Tecnologia.html" class="boton-info">Más información</a>
+                        <img src="Img/img_Nuevo_proyecto.png" alt="Nuevos Proyectos">
+                        <h3>Conoce nuestros nuevos proyectos</h3>
+                        <p>Nos esforzamos en ofrecer proyectos nuevos y decalidad a nuestros usuarios</p>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="servicio">
-                        <img src="Img/Tecnologias/5g.webp" alt="Telefonía">
-                        <h3>Telefonía</h3>
-                        <p>Planes flexibles adaptados a tus necesidades</p>
-                        <a href="Tecnologia.html" class="boton-info">Más información</a>
+                        <img src="Img/img_Equipo.jpg" alt="Nuestro equipo">
+                        <h3>Conoce nuestro equipo de desarrollo</h3>
+                        <p>Nuestro equipo de desarrollo: Actualmente contamos con un equipo muy sofisticado para la parte de diseño e ilustracion, simulación  y animacion 2D y 3D. Contamos con personas altamente capacitadas todos estudiados en Ingenieria en Multimedia</p>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="servicio">
-                        <img src="Img/Tecnologias/tv-digital.jpg" alt="Televisión">
-                        <h3>Televisión</h3>
-                        <p>Los mejores canales y contenido exclusivo</p>
-                        <a href="Tecnologia.html" class="boton-info">Más información</a>
-                    </div>
-                </div>
+                
             </div>
         </section>
     </main>
